metadata/objects/Object500__c.object
<CustomObject>
    <fields>
        <fullName>Checkbox_103__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox_103</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox_109__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox_109</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox_10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox_10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency_17__c</fullName>
        <label>Currency_17</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency_18__c</fullName>
        <label>Currency_18</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency_19__c</fullName>
        <label>Currency_19</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DateTime_106__c</fullName>
        <label>DateTime_106</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime_10__c</fullName>
        <label>DateTime_10</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime_114__c</fullName>
        <label>DateTime_114</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_100__c</fullName>
        <label>Date_100</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_102__c</fullName>
        <label>Date_102</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_107__c</fullName>
        <label>Date_107</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_118__c</fullName>
        <label>Email_118</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_125__c</fullName>
        <label>Email_125</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_132__c</fullName>
        <label>Email_132</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LongText_14__c</fullName>
        <label>LongText_14</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongText_1__c</fullName>
        <label>LongText_1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongText_27__c</fullName>
        <label>LongText_27</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_110__c</fullName>
        <label>Number_110</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_116__c</fullName>
        <label>Number_116</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_119__c</fullName>
        <label>Number_119</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_19__c</fullName>
        <label>Percent_19</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_21__c</fullName>
        <label>Percent_21</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_26__c</fullName>
        <label>Percent_26</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone_24__c</fullName>
        <label>Phone_24</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_30__c</fullName>
        <label>Phone_30</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_40__c</fullName>
        <label>Phone_40</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Picklist_101__c</fullName>
        <label>Picklist_101</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_111__c</fullName>
        <label>Picklist_111</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_112__c</fullName>
        <label>Picklist_112</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RichText_5__c</fullName>
        <label>RichText_5</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RichText_9__c</fullName>
        <label>RichText_9</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TextArea_16__c</fullName>
        <label>TextArea_16</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TextArea_1__c</fullName>
        <label>TextArea_1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TextArea_33__c</fullName>
        <label>TextArea_33</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Text_104__c</fullName>
        <label>Text_104</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_105__c</fullName>
        <label>Text_105</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_117__c</fullName>
        <label>Text_117</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Object 500</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OBJ500-{000000}</displayFormat>
        <label>Sample Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object 500s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>